--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHEAPEATS</title>
+    <link rel="stylesheet" href="generalstyle.css"/>
 </head>
 <body>
 
-    
+<header>
+     <a href="#">ARTIKLER</a>
+     <a href="#">OPSKRIFTER</a>
+     <a href="#"><img src="forsideimg/logo.jpg" alt="logo"></a>
+     <a href="#">TØM KØLESKABET</a>
+     <a href="#">BOOK EN RÅDGIVER</a>
+</header>
+
+<main>
+
+     <h1>NYESTE</h1>
+     <hr>
+     <h3>OPSKRIFTER</h3>
+</main>
+
+<footer>
+     <a href="#">Sociale medier</a>
+     <a href="#">App</a>
+     <a href="#">Om os</a>
+     <a href="#">Kontakt os</a>
+</footer>
+
 </body>
 </html>
