--- a/index.html
+++ b/index.html
@@ -6,22 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHEAPEATS</title>
     <link rel="stylesheet" href="generalstyle.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header>
      <a href="#">ARTIKLER</a>
      <a href="#">OPSKRIFTER</a>
+     <div>
      <a href="#"><img src="forsideimg/logo.jpg" alt="logo"></a>
+    </div>
      <a href="#">TØM KØLESKABET</a>
      <a href="#">BOOK EN RÅDGIVER</a>
 </header>
 
 <main>
-
-     <h1>NYESTE</h1>
+     <div class="nyesteopskrifter">
+     <a href="#"><h1>NYESTE</h1></a>
      <hr>
-     <h3>OPSKRIFTER</h3>
+     <a href="#"><h3>OPSKRIFTER</h3></a>
+     </div>
 </main>
 
 <footer>
