--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<!--HVORFOR ER MINE LINKS STOPPET MED AT VIRKE EFTER DROPDOWN-->
 <header>
-     <a href="#">ARTIKLER</a>
+   
+    <div class="dropdown" style="float:left;">
+        <p class="dropbtn">ARTIKEL</p>
+        <div class="dropdown-content" style="left:0;">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+        </div>
+      </div>
+      
      <a href="#">OPSKRIFTER</a>
-     <div>
+     
      <a href="#"><img src="forsideimg/logo.jpg" alt="logo"></a>
-    </div>
+
      <a href="#">TØM KØLESKABET</a>
      <a href="#">BOOK EN RÅDGIVER</a>
 </header>
