--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHEAPEATS</title>
-    <link rel="stylesheet" href="generalstyle.css"/>
+    <link rel="stylesheet" href="forsidestyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-<!--HVORFOR ER MINE LINKS STOPPET MED AT VIRKE EFTER DROPDOWN-->
+
 <header>
    
     <div class="dropdown" style="float:left;">
@@ -23,10 +23,8 @@
         </div>
       </div>
       
-     <a href="#">OPSKRIFTER</a>
-     
+     <a href="opskrifter.html">OPSKRIFTER</a>
      <a href="#"><img src="forsideimg/logo.jpg" alt="logo"></a>
-
      <a href="#">TØM KØLESKABET</a>
      <a href="#">BOOK EN RÅDGIVER</a>
 </header>
