--- a/cheapeats/billigerehverdag.html
+++ b/cheapeats/billigerehverdag.html
@@ -54,15 +54,15 @@
 <section class="threecards">
 
    <section>
-       <a href="#">
+       <a href="billigbytur.html">
 
             <img src="" alt="Her skal være et billede">
 
             <div class="skriftkasse">
-                <h1>PROTEIN</h1>
+                <h1>BILLIGERE BYTUR</h1>
                 <hr>
                 <h2>
-                    Opskrifter til dig der ønsker at spise mere protein
+                    Her er 6 råd til at spare på din bytur   
                 </h2>
                 <h3> Af redaktionen</h3>
             </div>
@@ -71,15 +71,15 @@
    </section>
 
    <section>
-        <a href="#">
+        <a href="tipstiletbilligeremadbudget.html">
 
             <img src="" alt="Her skal være et billede">
 
             <div class="skriftkasse">
-                <h1>GRØNTSAGER</h1>
+                <h1>BILLIGERE MADBUDGET</h1>
                 <hr>
                 <h2>
-                   Opskrifter til dig der ønsker at spise flere grøntsager
+                 Her er 7 tips til at spare på dit madbudget
                 </h2>
                 <h3> Af redaktionen</h3>
             </div>
