--- a/cheapeats/billigbytur.html
+++ b/cheapeats/billigbytur.html
@@ -45,12 +45,16 @@
       Her er 6 råd til at spare på din bytur. 
 </p>
 <h3>Har du overskud i budgettet? </h3>
+
+ <img id=billedehøjre src="artikelimg/drinks.jpg" alt="planlæg">
+
 <p>
      Når man lægger et budget, er det vigtigt at være realistisk om sine udgifter og fornøjelser. 
      Du skal derfor vurdere inden du tager afsted hvad du har råd til 
      og hvordan du vil bruge dine penge inden i byen. 
      Sæt derfor et maks. beløb til side af hvad du må bruge på byturen.     
 </p>
+
 <p>
      Hvis ikke du har råd, kan du foreslå at dig og dine venner kan lave noget der ikke koster penge
       så som picnic, en gåtur eller madklub.    
