--- a/cheapeats/billigerehverdag.html
+++ b/cheapeats/billigerehverdag.html
@@ -44,7 +44,7 @@
 
 <!--OVERSKRIFT-->    
 <div id="overskrift">
-<h1>OPSKRIFTER</h1>
+<h1>BILLIGERE HVERDAG</h1>
 </div>
 
 
@@ -56,7 +56,7 @@
    <section>
        <a href="billigbytur.html">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/drinks.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>BILLIGERE BYTUR</h1>
@@ -73,7 +73,7 @@
    <section>
         <a href="tipstiletbilligeremadbudget.html">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/planlæg.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>BILLIGERE MADBUDGET</h1>
@@ -89,7 +89,7 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/aktier.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>FULDKORN</h1>
@@ -113,7 +113,7 @@
    <section>
        <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/løb.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>VEGANSK</h1>
@@ -128,7 +128,7 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/resturant.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>SUND FASTFOOD</h1>
@@ -140,9 +140,9 @@
    </section>
 
    <section>
-        <a href="#">
+        <a href="">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/cykling.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>SUNDE SØDE SNACKS</h1>
