--- a/cheapeats/omelette.html
+++ b/cheapeats/omelette.html
@@ -49,10 +49,10 @@
     INGREDIENSER
 </h3>
 
-<section id="ingredienser">
-</section> 
+<img id= billedehøjre src="proteinimg/omelette.jpg" alt="billede af omelette">
+
 <li>
-    <p>6 Æg</p>
+<p>6 Æg</p>
 </li>
 <li>
     <p>1 Peberfrugt</p>
@@ -72,8 +72,8 @@
 <li>
     <p>Rugbrød</p>
 </li>
-<img src="" alt="billede af burrito">
-</section>
+
+
 
 
 <h3 id="instruktioner">
@@ -89,3 +89,13 @@
 </ol>
 
 </main>
+<!--FOOTER-->
+<footer>
+    <a href="#">Sociale medier</a>
+    <a href="#">App</a>
+    <a href="#">Om os</a>
+    <a href="#">Kontakt os</a>
+ </footer>
+ 
+ </body>
+ </html>
