--- a/cheapeats/proteinburrito.html
+++ b/cheapeats/proteinburrito.html
@@ -49,8 +49,8 @@
     INGREDIENSER
 </h3>
 
-<section id="ingredienser">
-</section> 
+<img id=billedehøjre src="madimg/mexikansk.jpg" alt="billede af burrito">
+
 <li>
     <p>200g kyllingefars</p>
 </li>
@@ -81,8 +81,7 @@
 <li>
     <p>Salt + peber (efter smag)</p>
 </li>
-<img src="" alt="billede af burrito">
-</section>
+
 
 
 <h3 id="instruktioner">
@@ -98,3 +97,13 @@
 </ol>
 
 </main>
+<!--FOOTER-->
+<footer>
+    <a href="#">Sociale medier</a>
+    <a href="#">App</a>
+    <a href="#">Om os</a>
+    <a href="#">Kontakt os</a>
+ </footer>
+ 
+ </body>
+ </html>
