--- a/cheapeats/proteinpandekager.html
+++ b/cheapeats/proteinpandekager.html
@@ -48,33 +48,23 @@
 <h3>
     INGREDIENSER
 </h3>
-
-<!-- SKAL RETTES-->
-<section id="ingredienser">
-</section> 
+<img id="billedehøjre" src="proteinimg/pandekager.jpg" alt="billede af burrito">
 <li>
-    <p>6 Æg</p>
+    <p>4 Æg</p>
 </li>
 <li>
-    <p>1 Peberfrugt</p>
+    <p>2 bananer</p>
 </li>
 <li>
-    <p> 1 stk rødløg</p>
+    <p> 2 dl havegryn</p>
 </li>
 <li>
-    <p>1/2 Pakke skinke(100g)</p>
+    <p>1 spsk vaniljesukker</p>
 </li>
 <li>
     <p>1 Knivspids salt</p>
 </li>
-<li>
-    <p>1 Knivspids peber</p>
-</li>
-<li>
-    <p>Rugbrød</p>
-</li>
-<img src="" alt="billede af burrito">
-</section>
+
 
 
 <h3 id="instruktioner">
@@ -82,11 +72,20 @@
 </h3>
 
 <ol class="instruktioner2">
-    <li>Skær peberfrugt, løg og skinke i små tern</li>
-    <li>Tilføj fedstof til en varm pande og slå æggene ud i panden</li>
-    <li>Drys peberfrugt,løg og skinke på panden og tilføj salt og peber</li>
-    <li>Steg omeletten på begge sider indtil den er gennemstegt.</li>
-    <li>Rist lidt rugbrød og spis omeletten dertil</li>
+    <li>Mos bananerne i en skål og tilføj æggene. Rør dette rundt indtil det er en samlet masse</li>
+    <li>Tilføj de resterende tørre indgredienser og rør det sammen.</li>
+    <li>Tilføj smør til en varm pande og steg pandekagerne på begge sider indtil de er gennemstegte</li>
+    <li>Tilføj din yndlings form for topping og spis</li>
 </ol>
 
 </main>
+<!--FOOTER-->
+<footer>
+    <a href="#">Sociale medier</a>
+    <a href="#">App</a>
+    <a href="#">Om os</a>
+    <a href="#">Kontakt os</a>
+ </footer>
+ 
+ </body>
+ </html>
