--- a/cheapeats/spisplantebaseretprotein.html
+++ b/cheapeats/spisplantebaseretprotein.html
@@ -75,9 +75,12 @@
      Hvis man derfor ønsker at tabe sig kan man ælge at spise mad der har et højt protein indhold, 
     men lavt kalorie indhold for stadig at kunne holde mætheden og energien oppe. 
 </p>
+<img id=billedehøjre src="artikelimg/proteinerudenkød.jpg" alt="">
 <h3>
     PLANTEBASERET PROTEINHOLDIGE PRODUKTER 
 </h3>
+
+
 <li>
     <p>Grønne ærter: 6 g protein pr. 100 g. </p>
 </li>
@@ -123,6 +126,7 @@
 <li>
     <p>Vilde ris: 4g protein pr 100g </p>
 </li>
+
 
 <p>
       Disse produkter har også mange andre sunde dele i sig udover proteinerne.
