--- a/cheapeats/sunderehverdag.html
+++ b/cheapeats/sunderehverdag.html
@@ -53,15 +53,15 @@
 <section class="threecards">
 
    <section>
-       <a href="#">
+       <a href="spisplantebaseretprotein.html">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/proteinerudenkød.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
-                <h1>PROTEIN</h1>
+                <h1>ØG DIT PROTEIN INDHOLD UDEN KØD</h1>
                 <hr>
                 <h2>
-                    Opskrifter til dig der ønsker at spise mere protein
+                    Guide til plantebaseret protein
                 </h2>
                 <h3> Af redaktionen</h3>
             </div>
@@ -72,7 +72,7 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/fordelevedatspisenødder.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>GRØNTSAGER</h1>
@@ -88,7 +88,7 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/fordelingafprotein:kulhydrat:grøntsager.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>FULDKORN</h1>
@@ -112,7 +112,7 @@
    <section>
        <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/ideertilsundmorgenmad.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>VEGANSK</h1>
@@ -127,7 +127,7 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/mealprepping.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>SUND FASTFOOD</h1>
@@ -141,7 +141,7 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="artikelimg/sniggrøntsageridinmad.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>SUNDE SØDE SNACKS</h1>
