--- a/cheapeats/tipstiletbilligeremadbudget.html
+++ b/cheapeats/tipstiletbilligeremadbudget.html
@@ -42,6 +42,8 @@
      Hvis man har mistet overblik over sit forbrug og ikke føler at man har nogle penge i slutningen af måneden, 
      kan det være smart at undersøge sit madbudget først. Her er 7 tips til at sænke dit madbudget. 
 </p>
+<img id=billedehøjre src="artikelimg/planlæg.jpg" alt="planlæg">
+
 <h3>
      FÅ ET OVERBLIK 
 </h3>
@@ -70,6 +72,9 @@
          Ude og spise med veninder
      </p>
 </li>
+
+
+
 <p>
      Når du har kategoriseret disse udgifter, kan du regne dem sammen 
      og se hvor meget du bruger på hver enkelt kategori. 
@@ -100,6 +105,8 @@
       Hvis du planlægger grundigt, kan man holde sig til at handle stort ind en gang i ugen, 
       derved er det også nemmere at holde styr på sit madbudget.  
 </p>
+
+<img id=billedehøjre src="artikelimg/mealprepping.jpg" alt="mealprepping">
 
 <h3>
       MEAL PREP
