--- a/cheapeats/billigbytur.html
+++ b/cheapeats/billigbytur.html
@@ -14,13 +14,13 @@
     
 <header>
    
-    <div class="dropdown" style="float:left;">
+    <div class="dropdown">
            <p class="dropbtn">ARTIKEL</p>
 
-                <div class="dropdown-content" style="left:0;">
+                <div class="dropdown-content">
                     <a href="billigerehverdag.html">Billigere hverdag</a>
                     <hr>
-                    <a href="#">Sundere hverdag</a>
+                    <a href="sunderehverdag.html">Sundere hverdag</a>
                     <hr>
                     <a href="#">Madspild</a>
                 </div>
@@ -28,8 +28,8 @@
          
    <a href="opskrifter.html">OPSKRIFTER</a>
    <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="logo"></a>
-   <a href="#">TØM KØLESKABET</a>
-   <a href="#">BOOK EN RÅDGIVER</a>
+   <a href="tømkøleskabet.html">TØM KØLESKABET</a>
+   <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
 
 <main>
