--- a/cheapeats/billigerehverdag.html
+++ b/cheapeats/billigerehverdag.html
@@ -18,13 +18,13 @@
 
 <header>
    
-    <div class="dropdown" style="float:left;">
+    <div class="dropdown" >
            <p class="dropbtn">ARTIKEL</p>
 
-                <div class="dropdown-content" style="left:0;">
+                <div class="dropdown-content">
                     <a href="billigerehverdag.html">Billigere hverdag</a>
                     <hr>
-                    <a href="#">Sundere hverdag</a>
+                    <a href="sunderehverdag.html">Sundere hverdag</a>
                     <hr>
                     <a href="#">Madspild</a>
                 </div>
@@ -32,8 +32,8 @@
          
    <a href="opskrifter.html">OPSKRIFTER</a>
    <a href="index.html"><img src="undersideimg/logounderside.jpg" alt="logo"></a>
-   <a href="#">TØM KØLESKABET</a>
-   <a href="#">BOOK EN RÅDGIVER</a>
+   <a href="tømkøleskabet.html">TØM KØLESKABET</a>
+   <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
 
 
@@ -44,7 +44,7 @@
 
 <!--OVERSKRIFT-->    
 <div id="overskrift">
-<h1>BILLIGERE HVERDAG</h1>
+<h1>HJÆLP TIL EN BILLIGERE HVERDAG</h1>
 </div>
 
 
@@ -62,7 +62,7 @@
                 <h1>BILLIGERE BYTUR</h1>
                 <hr>
                 <h2>
-                    Her er 6 råd til at spare på din bytur   
+                    Her er 6 tips til at spare på din bytur   
                 </h2>
                 <h3> Af redaktionen</h3>
             </div>
@@ -92,9 +92,9 @@
             <img src="artikelimg/aktier.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
-                <h1>FULDKORN</h1>
+                <h1>LÆR AT INVESTERE</h1>
                 <hr>
-               <h2> Opskrifter til dig der ønsker at spise mere fuldkorn</h2>
+               <h2>Her er 12 tips til dig der ønsker at investere</h2>
                <h3> Af redaktionen</h3>
             </div>  
        </a>
@@ -116,9 +116,9 @@
             <img src="artikelimg/løb.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
-                <h1>VEGANSK</h1>
+                <h1>ALTERNATIVER TIL SPORTSABONNEMENTER</h1>
                 <hr>
-                <h2>Opskrifter til dig der ønsker at spise vegansk</h2>
+                <h2>Hjælp til dig der ønsker at begynde at træne </h2>
                 <h3> Af redaktionen</h3>
             </div>
        </a>
@@ -131,9 +131,9 @@
             <img src="artikelimg/resturant.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
-                <h1>SUND FASTFOOD</h1>
+                <h1>SPAR MENS DU SPISER UDE</h1>
                 <hr>
-                <h2>Opskrifter til dig der vil have et sundt alternativ</h2>
+                <h2>Her er 6 tips til at hjælpe med at spare når du spiser ude.</h2>
                 <h3> Af redaktionen</h3>
             </div>
         </a>
@@ -145,9 +145,9 @@
             <img src="artikelimg/cykling.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
-                <h1>SUNDE SØDE SNACKS</h1>
+                <h1>SPAR PÅ TRANSPORTEN</h1>
                 <hr>
-                <h2> Opskrifter til dig der vil have et sundt alternativ til den søde tand</h2>
+                <h2> Her er 8 tips til at spare på transporten</h2>
                 <h3> Af redaktionen</h3>
             </div>
        </a>
