--- a/cheapeats/nyeste_opskrifter.html
+++ b/cheapeats/nyeste_opskrifter.html
@@ -16,13 +16,13 @@
 
 <header>
    
-    <div class="dropdown" style="float:left;">
+    <div class="dropdown">
            <p class="dropbtn">ARTIKEL</p>
 
-                <div class="dropdown-content" style="left:0;">
+                <div class="dropdown-content" >
                     <a href="billigerehverdag.html">Billigere hverdag</a>
                     <hr>
-                    <a href="#">Sundere hverdag</a>
+                    <a href="sunderehverdag.html">Sundere hverdag</a>
                     <hr>
                     <a href="#">Madspild</a>
                 </div>
@@ -30,8 +30,8 @@
          
    <a href="opskrifter.html">OPSKRIFTER</a>
    <a href="index.html"><img src="undersideimg/logounderside.jpg" alt="logo"></a>
-   <a href="#">TØM KØLESKABET</a>
-   <a href="#">BOOK EN RÅDGIVER</a>
+   <a href="tømkøleskabet.html">TØM KØLESKABET</a>
+   <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
 
 <main>
@@ -50,11 +50,11 @@
    <section>
        <a href="#">
 
-             <img src="" alt="Her skal være et billede">
+             <img src="madimg/afrikansk.jpg" alt="Her skal være et billede">
              <div class="skriftkasse">
             <!-- bruger <br> for at undgå at skulle ændre i generelle regler i stylesheet-->
              <br>
-             <h1>XXXXX</h1>
+             <h1>GRØNTSAGSKEBAB MED SALSA OG RIS</h1>
              <br>
              </div>
        </a>
@@ -64,11 +64,11 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="madimg/brød.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <br>
-                <h1>XXXXXXX</h1>
+                <h1>LANGTIDSHÆVET FULDKORNSBRØD</h1>
                 <br>
             </div>
         </a>
@@ -77,11 +77,11 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="madimg/udforskasien.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <br>
-                <h1>XXXXXX</h1>
+                <h1>VIETNAMESISK SUPPE MED OKSEKØD OG RISNUDLER</h1>
                 <br>
             </div>
        </a>
@@ -90,11 +90,11 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="madimg/fleregrøntsager.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <br>
-                <h1>XXXX</h1>
+                <h1>SOMMER TOMATSALAT MED FRISK URTEDRESSING</h1>
                 <br>
             </div>
         </a>
@@ -111,11 +111,11 @@
    <section>
        <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="madimg/sundfastfood.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <br>
-                <h1>XXXXXXX</h1>
+                <h1>FULDKORNSBURGER MED GRØNKÅL OG CHILI</h1>
                 <br>
             </div>
        </a>
@@ -125,11 +125,11 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="madimg/bagning.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <br>
-                <h1>XXXXXX</h1>
+                <h1>FULDKORNSTÆRTE MED TOMAT OG AUBERGINE</h1>
                 <br>
             </div>
         </a>
@@ -138,11 +138,11 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="madimg/vegansk.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <br>
-                <h1>XXXXX</h1>
+                <h1>OVNSTEGTE SØDEKARTOFLER MED FRISK SALAT</h1>
                 <br>
             </div>
        </a>
@@ -151,11 +151,11 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="madimg/mereprotein.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <br>
-                <h1>XXXXX</h1>
+                <h1>BBQ KOTELLET MED TILBEREDT BROCCOLI</h1>
                 <br>
             </div>
         </a>
@@ -170,11 +170,11 @@
        <section>
            <a href="#">
    
-                <img src="" alt="Her skal være et billede">
+                <img src="proteinimg/grill.jpg" alt="Her skal være et billede">
    
                 <div class="skriftkasse">
                     <br>
-                    <h1>XXXXX</h1>
+                    <h1>GRILLET KEBAB MED GRØNTSAGER</h1>
                     <br>
                 </div>
            </a>
@@ -184,11 +184,11 @@
        <section>
             <a href="#">
    
-                <img src="" alt="Her skal være et billede">
+                <img src="proteinimg/sesamekylling.jpg" alt="Her skal være et billede">
    
                 <div class="skriftkasse">
                     <br>
-                    <h1>XXXXX</h1>
+                    <h1>SESAM TERIAKI KYLLING MED RIS OG BROCCOLI</h1>
                     <br>
                 </div>
             </a>
@@ -197,11 +197,11 @@
        <section>
             <a href="#">
    
-                <img src="" alt="Her skal være et billede">
+                <img src="proteinimg/tofumbroccoli.jpg" alt="Her skal være et billede">
    
                 <div class="skriftkasse">
                     <br>
-                    <h1>XXXXXXXX</h1>
+                    <h1>FRITURE STEGT TOFU MED KRYDRET GRØNTSAGER</h1>
                     <br>
                 </div>
            </a>
@@ -210,11 +210,11 @@
        <section>
             <a href="#">
    
-                <img src="" alt="Her skal være et billede">
+                <img src="madimg/mexikansk.jpg" alt="Her skal være et billede">
    
                 <div class="skriftkasse">
                     <br>
-                    <h1>XXXXXXXX</h1>
+                    <h1>FULDKORNSBURRITO MED KYLLING</h1>
                     <br>
                 </div>
             </a>
