--- a/cheapeats/omelette.html
+++ b/cheapeats/omelette.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billig Bytur</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
-    <link rel="stylesheet" href="opskrifterstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
@@ -15,13 +14,13 @@
     
 <header>
    
-    <div class="dropdown" style="float:left;">
+    <div class="dropdown">
            <p class="dropbtn">ARTIKEL</p>
 
-                <div class="dropdown-content" style="left:0;">
+                <div class="dropdown-content">
                     <a href="billigerehverdag.html">Billigere hverdag</a>
                     <hr>
-                    <a href="#">Sundere hverdag</a>
+                    <a href="sunderehverdag.html">Sundere hverdag</a>
                     <hr>
                     <a href="#">Madspild</a>
                 </div>
@@ -29,8 +28,8 @@
          
    <a href="opskrifter.html">OPSKRIFTER</a>
    <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="logo"></a>
-   <a href="#">TØM KØLESKABET</a>
-   <a href="#">BOOK EN RÅDGIVER</a>
+   <a href="tømkøleskabet.html">TØM KØLESKABET</a>
+   <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
 
 <main>
@@ -45,35 +44,38 @@
     <p>Kalorier = 290 pr servering</p>
     <p>Antal serveringer = 2 stk</p>
 </section>
+
+<section class="ingredienseromelette">
 <h3>
     INGREDIENSER
 </h3>
 
 <img id= billedehøjre src="proteinimg/omelette.jpg" alt="billede af omelette">
 
+<ul>
 <li>
 <p>6 Æg</p>
 </li>
 <li>
-    <p>1 Peberfrugt</p>
+    1 Peberfrugt
 </li>
 <li>
-    <p> 1 stk rødløg</p>
+    1 stk rødløg
 </li>
 <li>
-    <p>1/2 Pakke skinke(100g)</p>
+    1/2 Pakke skinke(100g)
 </li>
 <li>
-    <p>1 Knivspids salt</p>
+    1 Knivspids salt
 </li>
 <li>
-    <p>1 Knivspids peber</p>
+    1 Knivspids peber
 </li>
 <li>
-    <p>Rugbrød</p>
+    Rugbrød
 </li>
-
-
+</ul>
+</section>
 
 
 <h3 id="instruktioner">
