--- a/cheapeats/opskrifter.html
+++ b/cheapeats/opskrifter.html
@@ -16,14 +16,13 @@
 <!--ØVERSTE DEL AF HJEMMESIDEN-->
 
 <header>
-   
-     <div class="dropdown" style="float:left;">
+     <div class="dropdown">
             <p class="dropbtn">ARTIKEL</p>
 
-                 <div class="dropdown-content" style="left:0;">
+                 <div class="dropdown-content" >
                      <a href="billigerehverdag.html">Billigere hverdag</a>
                      <hr>
-                     <a href="#">Sundere hverdag</a>
+                     <a href="sunderehverdag.html">Sundere hverdag</a>
                      <hr>
                      <a href="#">Madspild</a>
                  </div>
@@ -31,8 +30,8 @@
           
     <a href="opskrifter.html">OPSKRIFTER</a>
     <a href="index.html"><img src="undersideimg/logounderside.jpg" alt="logo"></a>
-    <a href="#">TØM KØLESKABET</a>
-    <a href="#">BOOK EN RÅDGIVER</a>
+    <a href="tømkøleskabet.html">TØM KØLESKABET</a>
+    <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
  </header>
 
 
@@ -55,7 +54,7 @@
     <section>
         <a href="protein.html">
 
-             <img src="madimg/mere protein.jpg" alt="Her skal være et billede">
+             <img src="madimg/mereprotein.jpg" alt="Her skal være et billede">
 
              <div class="skriftkasse">
                  <h1>PROTEIN</h1>
@@ -71,7 +70,7 @@
     <section>
          <a href="grøntsager.html">
 
-             <img src="madimg/flere grøntsager.jpg" alt="Her skal være et billede">
+             <img src="madimg/fleregrøntsager.jpg" alt="Her skal være et billede">
 
              <div class="skriftkasse">
                  <h1>GRØNTSAGER</h1>
@@ -151,9 +150,9 @@
              <img src="madimg/muffins.jpg" alt="Her skal være et billede">
 
              <div class="skriftkasse">
-                 <h1>SUNDE SØDE SNACKS</h1>
+                 <h1>SØDE SNACKS</h1>
                  <hr>
-                 <h2> Opskrifter til dig der vil have et sundt alternativ til den søde tand</h2>
+                 <h2>Søde, lækre, sunde og billige snacks </h2>
              </div>
         </a>
     </section>
@@ -212,7 +211,7 @@
                  <div class="skriftkasse">
                      <h1>UDFORSK AFRIKA</h1>
                      <hr>
-                     <h2> Opskrifter til dig der vil udforske den afrikanske madkultur</h2>
+                     <h2> Udforske den afrikanske madkultur</h2>
                  </div>
             </a>
         </section>
@@ -225,7 +224,7 @@
                  <div class="skriftkasse">
                      <h1>UDFORSK AMERIKA</h1>
                      <hr>
-                     <h2>Opskrifter til dig der vil udforske den amerikanske madkultur</h2>
+                     <h2>Udforske den amerikanske madkultur</h2>
                  </div>
              </a>
         </section> 
