--- a/cheapeats/proteinburrito.html
+++ b/cheapeats/proteinburrito.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billig Bytur</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
-    <link rel="stylesheet" href="opskrifterstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
@@ -15,13 +14,13 @@
     
 <header>
    
-    <div class="dropdown" style="float:left;">
+    <div class="dropdown">
            <p class="dropbtn">ARTIKEL</p>
 
-                <div class="dropdown-content" style="left:0;">
+                <div class="dropdown-content" >
                     <a href="billigerehverdag.html">Billigere hverdag</a>
                     <hr>
-                    <a href="#">Sundere hverdag</a>
+                    <a href="sunderehverdag.html">Sundere hverdag</a>
                     <hr>
                     <a href="#">Madspild</a>
                 </div>
@@ -29,8 +28,8 @@
          
    <a href="opskrifter.html">OPSKRIFTER</a>
    <a href="index.html"><img src="artikelimg/logoartikel.jpg" alt="logo"></a>
-   <a href="#">TØM KØLESKABET</a>
-   <a href="#">BOOK EN RÅDGIVER</a>
+   <a href="tømkøleskabet.html">TØM KØLESKABET</a>
+   <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
 
 <main>
@@ -45,44 +44,48 @@
     <p>Kalorier = 345 pr servering</p>
     <p>Antal serveringer = 6 stk</p>
 </section>
-<h3>
-    INGREDIENSER
-</h3>
+
+
+<section class="ingredienserburrito">
+    <h3>
+        INGREDIENSER
+    </h3>
 
 <img id=billedehøjre src="madimg/mexikansk.jpg" alt="billede af burrito">
 
+<ul>
 <li>
-    <p>200g kyllingefars</p>
+    200g kyllingefars
 </li>
 <li>
-    <p> 6 stk fuldkornstortillia</p>
+     6 stk fuldkornstortillia
 </li>
 <li>
-    <p> 1 stk rødløg</p>
+    1 stk rødløg
 </li>
 <li>
-    <p> 1 dåse sorte bønner</p>
+    1 dåse sorte bønner
 </li>
 <li>
-    <p>1 stk peberfrugt</p>
+    1 stk peberfrugt
 </li>
 <li>
-    <p> 1 dåse tomatkoncentrat</p>
+    1 dåse tomatkoncentrat
 </li>
 <li>
-    <p>low-fat græsk yogurt</p>
+    low-fat græsk yogurt
 </li>
 <li>
-    <p>1 teske chilisovs</p>
+    1 teske chilisovs
 </li>
 <li>
-    <p> Fajita krydderi</p>
+    Fajita krydderi
 </li>
 <li>
-    <p>Salt + peber (efter smag)</p>
+    Salt + peber (efter smag)
 </li>
-
-
+</section>
+</ul>
 
 <h3 id="instruktioner">
  INSTRUKTIONER   
