--- a/cheapeats/tømkøleskabet.html
+++ b/cheapeats/tømkøleskabet.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billig Bytur</title>
+    <title>Mere Protein</title>
     <link rel="stylesheet" href="artikelstyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <!--ØVERSTE DEL AF HJEMMESIDEN-->
+
 <header>
    
-    <div class="dropdown">
+    <div class="dropdown" >
            <p class="dropbtn">ARTIKEL</p>
 
                 <div class="dropdown-content" >
@@ -31,57 +32,9 @@
    <a href="tømkøleskabet.html">TØM KØLESKABET</a>
    <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
+<h1 id="sketchoverskrift"> Sketch af hvordan siden ca ville have set ud</h1>
+<img id=sketch src="undersideimg/sketchtømkøleskabet.jpg" alt="tøm køleskabet">
 
-<main>
-<!--OVERSKRIFT-->    
-<section id="overskrift">
-    <h1>PROTEINPANDEKAGER M. HAVRE OG BANAN</h1>
-</section>
-
-<section class="tracking">
-    <p>Pris = 10 kr pr servering</p>
-    <p>Protein = 18 g pr servering</p>
-    <p>Kalorier = 210 pr servering</p>
-    <p>Antal serveringer = 4 stk</p>
-</section>
-
-<section class="ingredienserpandekager">
-    <h3>
-        INGREDIENSER
-    </h3>
-<img id="billedehøjre" src="proteinimg/pandekager.jpg" alt="billede af burrito">
-<ul>
-<li>
-    4 Æg
-</li>
-<li>
-    2 bananer
-</li>
-<li>
-    2 dl havegryn
-</li>
-<li>
-    1 spsk vaniljesukker
-</li>
-<li>
-    1 Knivspids salt
-</li>
-</ul>
-</section>
-
-
-<h3 id="instruktioner">
- INSTRUKTIONER   
-</h3>
-
-<ol class="instruktioner2">
-    <li>Mos bananerne i en skål og tilføj æggene. Rør dette rundt indtil det er en samlet masse</li>
-    <li>Tilføj de resterende tørre indgredienser og rør det sammen.</li>
-    <li>Tilføj smør til en varm pande og steg pandekagerne på begge sider indtil de er gennemstegte</li>
-    <li>Tilføj din yndlings form for topping og spis</li>
-</ol>
-
-</main>
 <!--FOOTER-->
 <footer>
     <a href="#">Sociale medier</a>
