--- a/cheapeats/index.html
+++ b/cheapeats/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHEAPEATS</title>
+    <title>CHEAPEATS - Find artikler og billge, sunde opskrifter</title>
     <link rel="stylesheet" href="forsidestyle.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -13,22 +13,21 @@
 <body>
 
 <header>
-   
-    <div class="dropdown" style="float:left;">
+    <div class="dropdown">
         <p class="dropbtn">ARTIKEL</p>
-        <div class="dropdown-content" style="left:0;">
+        <div class="dropdown-content">
         <a href="billigerehverdag.html">Billigere hverdag</a>
         <hr>
         <a href="sunderehverdag.html">Sundere hverdag</a>
         <hr>
-        <a href="madspild.html">Madspild</a>
+        <a href="#">Madspild</a>
         </div>
       </div>
       
      <a href="opskrifter.html">OPSKRIFTER</a>
-     <a href="#"><img src="forsideimg/logo.jpg" alt="logo"></a>
-     <a href="#">TØM KØLESKABET</a>
-     <a href="#">BOOK EN RÅDGIVER</a>
+     <a href="index.html"><img src="forsideimg/logo.jpg" alt="logo"></a>
+     <a href="tømkøleskabet.html">TØM KØLESKABET</a>
+     <a href="bookenrådgiver.html">BOOK EN RÅDGIVER</a>
 </header>
 
 <main>
